--- a/app/assets/stylesheets/components/_crypto-index.scss
+++ b/app/assets/stylesheets/components/_crypto-index.scss
@@ -179,7 +179,7 @@
 }
 
 .index-name {
-  width: 280px;
+  width: 300px;
   padding-left: 20px;
 }
 
@@ -190,7 +190,7 @@
 }
 
 .index-table-container {
-  padding: 10px;
+  padding: 10px 0 10px 10px;
 }
 
 .crypto-index-table tbody {
@@ -198,4 +198,17 @@
   width: 100%;
   max-height: 650px;
   overflow: auto;
+}
+
+tr {
+  cursor: pointer;
+  margin-right: 0;
+  padding-right: 0;
+  .active {
+    background-color: white;
+  }
+}
+
+tbody tr:hover {
+  background-color: white;
 }
