--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -22,8 +22,7 @@
           </thead>
           <tbody>
             <% @cryptocurrencies.each do |crypto| %>
-              <%= link_to cryptocurrencies_path(crypto_id: crypto.id) do %>
-              <tr class="index-row">
+              <tr class="index-row" onclick="window.location='<%= "#{cryptocurrencies_path(crypto_id: crypto.id)}" %>';">
                 <td class="index-name" data-sort='<%= crypto.ticker_name %>'>
                   <div class="name-field-table">
                     <%= image_tag "#{crypto.ticker_code}.png", class: "portfolio-icon" %>
@@ -39,46 +38,10 @@
                   <td class="index-value" data-sort='<%= value_held %>'>$<%= number_with_delimiter(value_held.round, delimeter: ',') %></td>
                 <% end %>
               </tr>
-              <% end %>
             <% end %>
           </tbody>
         </table>
       </div>
-
-
-      <!-- Headers (COIN, PRICE, VALUE HELD) -->
-      <!-- <div class="crypto-list-headers">
-        <div class="product list-headers">
-          <div class='list-inline product-controls product-body'>
-            <li>Coin</li>
-          </div>
-          <ul class="list-inline product-controls">
-            <li>Price <span class="hide-dot">.</span></li>
-            <li></li>
-            <li>Value Held</li>
-          </ul>
-        </div>
-      </div>
-      <div class="scrollable-crypto-list">
-
-        <%# @cryptocurrencies.each do |crypto| %>
-          <%#= link_to cryptocurrencies_path(crypto_id: crypto.id) do %>
-
-          <div class="product each-crypto">
-            <%#= image_tag "#{crypto.ticker_code}.png", class: "product-image" %>
-            <div class='product-body'>
-              <h4><%#= crypto.ticker_name %> <span class="crypto-code"><%#= crypto.ticker_code %></span></h4>
-            </div>
-            <ul class="list-inline product-controls price-values">
-              <%# price = @live_prices[crypto.ticker_name][crypto.ticker_code] %>
-              <li><%#= "$#{number_with_delimiter(price.round(4), delimeter: ",")}" %></li>
-              <li></li>
-              <li>$<%#= number_with_delimiter((@value_held_hash[crypto.ticker_code] * price).round, delimeter: ',') %></li>
-            </ul>
-          </div>
-          <%# end %>
-        <%# end %>
-      </div> -->
     </div>
 
     <!-- here starts the show page, that has the coin chart, buy/sell option, etc -->
