--- a/app/views/cryptocurrencies/_show.html.erb
+++ b/app/views/cryptocurrencies/_show.html.erb
@@ -58,11 +58,13 @@
 
     <div class="buy-window">
       <%= form_for :trade, html: { autocomplete: "off" }, url: cryptocurrency_trades_path(@cryptocurrency), class: 'buy-input-container' do |f| %>
-        <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoBuy" placeholder="2 <%=@cryptocurrency.ticker_code %>">
+        <div class="inputs-wrapper">
+          <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoBuy" placeholder="2 <%=@cryptocurrency.ticker_code %>">
 
-        <i class="fas fa-exchange-alt"></i>
+          <i class="fas fa-exchange-alt"></i>
 
-        <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatBuy" placeholder="80 USD">
+          <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatBuy" placeholder="80 USD">
+        </div>
 
         <div class="buy-sell-button text-center">
           <%= f.submit 'BUY', class: 'btn btn-success' %>
@@ -77,12 +79,13 @@
 
 
       <%= form_for :trade, html: { autocomplete: "off" }, url: cryptocurrency_trades_path(@cryptocurrency), class: 'buy-input-container' do |f| %>
-        <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoSell" placeholder="20000 <%=@cryptocurrency.ticker_code %>">
+        <div class="inputs-wrapper">
+          <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoSell" placeholder="20000 <%=@cryptocurrency.ticker_code %>">
 
-        <i class="fas fa-exchange-alt"></i>
+          <i class="fas fa-exchange-alt"></i>
 
-        <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatSell" placeholder="2000 USD">
-
+          <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatSell" placeholder="2000 USD">
+        </div>
         <div class="buy-sell-button text-center">
           <%= f.submit 'SELL', class: 'btn btn-success' %>
         </div>
