--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,14 @@
       </p>
       <%= link_to "Sign Up", new_user_registration_path, class: "lp-sign-up-btn"  %>
     </div>
+    <div class="lp-dashboard-container text-center">
+      <%= image_tag 'lp-dashboard-snap.png', class: 'dashboard-lp' %>
+    </div>
   </div>
+
+  <!-- <div class="lp-dashboard-wrapper"> -->
+  <!-- </div> -->
+
 
   <!-- #################################################### -->
 
@@ -51,7 +58,7 @@
   <div class='landing-compo-main-wrapper'>
     <div id="why-croker" class="landing-compo-top-wrapper">
       <div class="landing-compo-top-container text-center">
-        <h2>Ask Yourself...</h2>
+        <h2>Why Croker?</h2>
         <p>Calling on crypto newbies and veterans alike</p>
       </div>
     </div>
