fixed a couple issues user crypto balance displaying on chart card. Killed has_cryptos? method from user because @cryptocurrency when called on user model returns nill

--- a/app/views/cryptocurrencies/_show.html.erb
+++ b/app/views/cryptocurrencies/_show.html.erb
@@ -49,7 +49,6 @@
       <h3>SELL</h3>
     </a>
   </div>
-
   <div class="">
     <% if current_user %>
       <%= hidden_field_tag :user_fiat_balance, current_user.fiat_balance, id:"user_fiat_balance" %>
@@ -59,12 +58,9 @@
       <%= form_for :trade, html: { autocomplete: "off" }, url: cryptocurrency_trades_path(@cryptocurrency), class: 'buy-input-container' do |f| %>
         <div class="inputs-wrapper">
           <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoBuy" placeholder="2 <%=@cryptocurrency.ticker_code %>">
-
           <i class="fas fa-exchange-alt"></i>
-
           <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatBuy" placeholder="80 USD">
         </div>
-
         <div class="buy-sell-button text-center">
           <%= f.submit 'BUY', class: 'btn btn-success' %>
         </div>
@@ -73,7 +69,7 @@
 
     <div class="buy-input-container sell-window hidden">
       <% if current_user %>
-        <% if current_user.has_portfolios? && current_user.has_crypto? %>
+        <% if current_user.has_portfolios? && current_user.portfolios.where(cryptocurrency_id: @cryptocurrency).any? %>
           <%= hidden_field_tag :crypto_amount_held, current_user.portfolios.where(cryptocurrency_id: @cryptocurrency).first.crypto_amount_held , class: "user_crypto_balance" %>
           <% else %>
           <%= hidden_field_tag :crypto_amount_held, '0' , class: "user_crypto_balance" %>
@@ -84,15 +80,14 @@
       <%= form_for :trade, html: { autocomplete: "off" }, url: cryptocurrency_trades_path(@cryptocurrency), class: 'buy-input-container' do |f| %>
         <div class="inputs-wrapper">
           <input type="text" name="crypto_amount" class="crypto-search-input form-control text-right" id="tradeValueCryptoSell" placeholder="20000 <%=@cryptocurrency.ticker_code %>">
-
           <i class="fas fa-exchange-alt"></i>
-
           <input type="text" name="fiat_amount" class="crypto-search-input form-control text-right" id="tradeValueFiatSell" placeholder="2000 USD">
         </div>
         <div class="buy-sell-button text-center">
           <%= f.submit 'SELL', class: 'btn btn-success' %>
         </div>
       <% end %>
+
     </div>
   </div>
 </div>
