--- a/app/assets/stylesheets/components/_tooltip.scss
+++ b/app/assets/stylesheets/components/_tooltip.scss
@@ -1,7 +1,7 @@
 /* Tooltip */
   .winner-tip + .tooltip > .tooltip-inner {
       background-color: black;
-      color: $green;
+      color: $gray;
       border: 1px solid black;
       padding: 15px;
       font-size: 20px;
