--- a/app/assets/stylesheets/components/_buy-sell-form.scss
+++ b/app/assets/stylesheets/components/_buy-sell-form.scss
@@ -15,21 +15,27 @@
   }
 }
 
+// Here starts CSS for the form inputs
+
 #tradeValueCryptoBuy {
   height: 55px;
+  border: 0.5px solid $light-gray;
 }
 
 #tradeValueFiatBuy {
   height: 55px;
+  border: 0.5px solid $light-gray;
 }
 
 
 #tradeValueCryptoSell {
   height: 55px;
   margin: 0;
+  border: 0.5px solid $light-gray;
 }
 
 #tradeValueFiatSell {
   height: 55px;
   margin: 0;
+  border: 0.5px solid $light-gray;
 }
