completed Croker landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
 <div class="landing-row-wrapper">
-
     <!-- Navigation -->
   <div class="navbar landing-navbar-custom navbar-fixed-top">
     <div class="nav-container ">
@@ -43,13 +42,9 @@
       <%= link_to "Sign Up", new_user_registration_path, class: "lp-sign-up-btn"  %>
     </div>
     <div class="lp-dashboard-container text-center">
-      <%= image_tag 'lp-dashboard-snap.png', class: 'dashboard-lp' %>
+      <%= image_tag 'lp-dash-final.png', class: 'dashboard-lp' %>
     </div>
   </div>
-
-  <!-- <div class="lp-dashboard-wrapper"> -->
-  <!-- </div> -->
-
 
   <!-- #################################################### -->
 
@@ -131,20 +126,13 @@
   </div>
  </div>
 
-  <div class="row">
+ <div class="row">
     <div class="landing-ending">
       <div class="container">
         <h1>Ready to fill your crypto bags?</h1>
         <p><strong>Get started</strong> with as little as <strong>$20</strong> and enjoy the ride.</p>
-        <%#= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn" %>
         <%= link_to "Sign Up", new_user_registration_path, class: "lp-sign-up-btn"  %>
       </div>
     </div>
-  </div>
-
-
-  <!-- #################################################### -->
-
-
-
+ </div>
 </div>
