--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .landing-row-wrapper {
   background-color: white;
   width: 100%;
@@ -14,7 +18,7 @@
 .lp-sign-up-btn {
   font-size: 25px;
   font-weight: regular;
-  padding: 15px 15px;
+  padding: 15px 25px;
   background-color: #60CD45;
   color: white;
   border-radius: 40px;
@@ -38,22 +42,14 @@
   text-transform: uppercase;
   font-family: 'Lato', 'sans-serif';
   padding: 0px 40px;
-  // background-color: #60CD44;
-  // background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
-
 }
 
-// @media (min-width: 768px) {
-  .landing-navbar-custom {
-    padding: 10px 0;
-    border-bottom: none;
-    letter-spacing: 1px;
-    background: #60CD44;
-    background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, #EAEAEA 50%);
-
-    // -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    // -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    // transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+.landing-navbar-custom {
+  padding: 10px 0;
+  border-bottom: none;
+  letter-spacing: 1px;
+  background: #60CD44;
+  background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, white 50%);
 }
 
 .navbar-brand {
@@ -72,7 +68,6 @@
   color: rgba(255, 255, 255, 0.8);
   outline: none;
   background-color: #60CD44;
-  // color: white;
 }
 
 .landing-navbar-custom .nav li.active a {
@@ -83,46 +78,30 @@
 .landing-intro {
   padding: 100px 0px 0px 0px;
   text-align: center;
-  // background-color: #60CD44;
-  // height: 100vh;
+  height: 120vh;
   h1 {
     font-size: 40px;
     padding-bottom: 10px;
   }
   p {
     font-size: 35px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
-  // font-size: 40px;
-  // display: table;
-  // width: 100%;
-  // height: auto;
-  // background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
-
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // background-size: cover;
-  // -o-background-size: cover;
 }
 
 .lp-dashboard-container {
-  // background-image: image_tag 'lp-dashboard.png'
-  // height: auto;
-  padding-top: 30px;
-  // text-align: center;
+  padding-top: 60px;
 }
 
 .dashboard-lp {
   width: 800px;
   height: auto;
-  border: solid 1px #60CD45;
   text-align: center;
+  -webkit-box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.2);
 }
 
 
 .landing-section-wrapper {
-// padding: 20px 40px;
-// margin: 20px;
 padding: 20px 40px 0px 40px;
 margin: 20px 20px 0px 20px;
 }
@@ -152,10 +131,6 @@ height: 100vh;
 .landing-compo-top-container p {
     font-size: 20px;
 }
-// h3 {
-//   font-size: 15px;
-//   // padding-top: 10px;
-// }
 
 .col-icons {
   text-align: center;
@@ -173,7 +148,6 @@ height: 100vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  // width: 40%;
 }
 
 
@@ -184,15 +158,13 @@ height: 100vh;
   text-align: center;
   h1 {
     font-size: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
   }
   p {
     font-size: 30px;
     font-weight: light;
     padding-bottom: 30px;
   }
-  // background-color: #60CD44;
-  // background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
 }
 
 
