--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -5,7 +5,7 @@
       <%= form_tag(cryptocurrencies_path, method: 'get', class: "form-inline") do %>
         <div id="search-data" class="form-search search-data" data-cryptocurrencies="<%= @cryptocurrencies.to_json %>">
           <%= text_field_tag :q, params[:q], autocomplete: :off, class: "form-control search-input", placeholder: "Search by crypto..." %>
-          <%= submit_tag "Search", class: "btn btn-success button-home" %>
+          <%#= submit_tag "Search", class: "btn btn-success button-home" %>
         </div>
       <% end %>
       <!-- <div class="crypto-search text-center">
