styled topups modals, added logos

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -516,5 +516,9 @@ a:link {
   font-size: 15px;
   color: $gray;
   margin-left: 5px;
+  margin-right: 1px;
 }
 
+.tooltip-top {
+      margin-right: 10px;
+}
