--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -28,7 +28,7 @@
             </div>
             <div class="title-header">
               <h2>Portfolio Change</h2>
-              <span><i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title= "Portfolio Change"></i></span>
+              <span><i class="far fa-question-circle tooltip-top" data-toggle="tooltip" data-placement="top" title= "Portfolio Change"></i></span>
             </div>
           </div>
           <div class="change-content">
@@ -64,7 +64,7 @@
             </div>
             <div class="title-header">
               <h2>Portfolio Value</h2>
-              <span><i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Value"></i></span>
+              <span><i class="far fa-question-circle tooltip-top" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Value"></i></span>
             </div>
           </div>
           <div class="value-content">
@@ -87,7 +87,7 @@
           </div>
           <div class="title-header">
             <h2>Portfolio Stats</h2>
-            <span><i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Stats"></i></span>
+            <span><i class="far fa-question-circle tooltip-top" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Stats"></i></span>
           </div>
         </div>
         <div class="stats-content">
@@ -128,7 +128,7 @@
           </div>
           <div class="title-header">
             <h2>Portfolio Overview</h2>
-            <span><i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Overview"></i></span>
+            <span><i class="far fa-question-circle tooltip-top" data-toggle="tooltip" data-placement="top" title= "Your Portfolio Overview"></i></span>
           </div>
         </div>
         <div class="portfolio-table">
@@ -185,7 +185,7 @@
           </div>
           <div class="title-header">
             <h2>Top 5 Winners/Losers</h2>
-            <span><i class="far fa-question-circle winner-tip" data-toggle="tooltip" data-placement="left" title= "Winners/Losers of Last 24h"></i></span>
+            <span><i class="far fa-question-circle winner-tip tooltip-top" data-toggle="tooltip" data-placement="left" title= "Winners/Losers of Last 24h"></i></span>
           </div>
         </div>
         <div class="winners-losers-cols">
@@ -226,7 +226,7 @@
           </div>
           <div class="title-header">
             <h2>Crypto News</h2>
-            <span><i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title= "News of the Crypto World"></i></span>
+            <span><i class="far fa-question-circle tooltip-top" data-toggle="tooltip" data-placement="top" title= "News of the Crypto World"></i></span>
           </div>
         </div>
         <div class="news-pane">
