--- a/app/assets/stylesheets/components/_facebook-button.scss
+++ b/app/assets/stylesheets/components/_facebook-button.scss
@@ -2,16 +2,17 @@
   border-bottom: 1px solid #EAEAEA;
   padding: 10px 0px;
   margin-bottom: 10px;
-}
-
-.facebook-login-button {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  align-items: center;
-  p {
-    color: white;
-    margin-left: 15px;
-    margin-bottom: 0px;
+  .facebook-login-button {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    align-items: center;
+    p {
+      font-size: 20px;
+      color: white;
+      margin-left: 15px;
+      margin-bottom: 0px;
+      padding-bottom: 0px;
+    }
   }
 }
