--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -15,10 +15,12 @@
   background-color: #ffffff;
   width: 350px;
   padding: 30px;
+  padding: 0px 50px;
 }
 
 .btn-login {
 width: 100%;
+margin-bottom: 20px;
 }
 
 #user_remember_me {
