--- a/app/views/top_ups/new.html.erb
+++ b/app/views/top_ups/new.html.erb
@@ -1,5 +1,6 @@
 <div class="login-flex">
-  <div class="login-wrapper">
+  <div class="login-wrapper topup-wrapper">
+    <%= image_tag "inlove_frog.png", class: "logo-topup"%>
     <h2 class="text-center" style="margin-top: 0; margin-bottom: 40px;">How much would you like to top up?</h2>
     <%= simple_form_for [@user, @top_up] do |f| %>
       <%= f.label "Top-Up Amount ($)" %>
@@ -7,7 +8,17 @@
       <%= f.hidden_field :transaction_type, value: 'top_up' %>
       <%= f.hidden_field :date_of_top_up, value: DateTime.now %>
       <%= f.hidden_field :state, value: 'pending' %>
-      <%= f.button :submit, class: "btn btn-success btn-login" %>
+      <%= f.button :submit, class: "btn btn-success btn-login", "data-toggle" => "modal", "data-target" => "#myModal"  %>
     <% end %>
   </div>
 </div>
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <%#= render "devise/registrations/new" %>
+    </div>
+  </div>
+</div>
+
