--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -3,8 +3,8 @@
     <!-- here starts the div that wraps the coins list on the left and the (buy/sell, chart) div on the right -->
     <div class="half-wrapper list">
       <%= form_tag(cryptocurrencies_path, method: 'get', class: "form-inline") do %>
-        <div id="search-data" class="form-search search-data" data-cryptocurrencies="<%= @cryptocurrencies.to_json %>">
-          <%= text_field_tag :q, params[:q], autocomplete: :off, class: "form-control search-input", placeholder: "Search by crypto..." %>
+        <div id="search-data" class="form-search search-data" data-cryptocurrencies="<%= @crypto_autocomplete.to_json %>">
+          <%= text_field_tag :query, params[:query], autocomplete: :off, class: "form-control search-input", placeholder: "Search by crypto..." %>
           <%#= submit_tag "Search", class: "btn btn-success button-home" %>
         </div>
       <% end %>
