--- a/app/assets/stylesheets/components/_crypto-index.scss
+++ b/app/assets/stylesheets/components/_crypto-index.scss
@@ -13,6 +13,15 @@
   margin: 45px;
 }
 
+.search-data {
+  input {
+    width: 580px !important;
+    height: 60px;
+    font-size: 18px;
+    margin: 10px;
+  }
+}
+
 .title-show {
   margin: 0px;
   padding: 0px;
