--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -24,3 +24,14 @@
     </div>
   </div>
 </div>
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <%#= render "devise/registrations/new" %>
+    </div>
+  </div>
+</div>
+
+
