--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,8 +32,10 @@
           </ul>
         </div>
         <a class="navbar-brand page-scroll" href="#page-top">
+        <%= link_to dashboard_path do %>
           <span class="landing-navbar-font-specs">Croker</span>
         </a>
+        <% end %>
         <%= link_to dashboard_path do %>
         <%= image_tag 'logo.png', class: 'logo-navbar', style: "height: 50px" %>
         <% end %>
@@ -50,12 +52,7 @@
       <h1 class="brand-heading">Crypto Trading Made Easy</h1>
       <p class="intro-text"><strong>Croker</strong> is your <strong>gateway</strong> into the <strong>cryptosphere</strong>.
       </p>
-      <% if user_signed_in? %>
         <%= link_to "Start Trading Now", cryptocurrencies_path, class: "lp-sign-up-btn"  %>
-      <% else %>
-        <%= link_to "Start Trading Now", new_user_registration_path, class: "lp-sign-up-btn"  %>
-      <% end %>
-      <%#= link_to "Start Trading Now", new_user_registration_path, class: "lp-sign-up-btn"  %>
     </div>
     <div class="lp-dashboard-container text-center">
       <%= image_tag 'lp-dash-final.png', class: 'dashboard-lp' %>
@@ -127,7 +124,7 @@
   <!-- #################################################### -->
 
   <div class='landing-compo-main-wrapper'>
-     <div id="our-solution" class="landing-compo-top-wrapper">
+     <div class="landing-compo-top-wrapper">
       <div class="landing-compo-top-container text-center">
         <h2>Launch into the cryptosphere within minutes</h2>
         <p>The three-step process</p>
