--- a/app/views/shared/_navbar_croker_sign_up.html.erb
+++ b/app/views/shared/_navbar_croker_sign_up.html.erb
@@ -17,7 +17,7 @@
       <%= link_to 'Sign Up', new_user_registration_path, class: "sign-up btn btn-success", "data-toggle" => "modal", "data-target" => "#myModal"%>
     </div>
 
-    <div class="btn-login">
+    <div class="btn-login-navbar">
       <%= link_to 'Log In', new_user_session_path, class: "login btn", "data-toggle" => "modal", "data-target" => "#myModal" %>
     </div>
   </div>
