--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,6 +15,17 @@ html {
   margin-right: 0;
 }
 
+.nav > li > a:hover, .nav > li > a:focus {
+  &:focus {
+    background-color: transparent;
+  }
+}
+
+.nav-sign-up-btn:active {
+  font-size: 20px;
+  background-color: #60CD45;
+}
+
 .lp-sign-up-btn {
   font-size: 25px;
   font-weight: regular;
@@ -77,7 +88,7 @@ html {
 
 
 .landing-intro {
-  padding: 100px 0px 0px 0px;
+  padding: 150px 0px 0px 0px;
   text-align: center;
   height: 120vh;
   h1 {
@@ -112,17 +123,10 @@ height: 100vh;
 }
 
 .landing-compo-top-wrapper {
-  padding-top: 100px;
+  padding-top: 150px;
   padding-bottom: 80px;
 }
 
-
-.landing-compo-wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 20px;
-}
 
 .landing-compo-top-container h2 {
   font-size: 30px;
