--- a/app/assets/stylesheets/components/_buy-sell-form.scss
+++ b/app/assets/stylesheets/components/_buy-sell-form.scss
@@ -3,39 +3,102 @@
   display: flex;
   margin-top: 60px;
   align-items: center;
-  padding-right: 50px;
-  padding-left: 50px;
+  justify-content: space-around;
+  // padding-right: 50px;
+  // padding-left: 50px;
   height: 55px;
   width: 460px;
   margin-left: auto;
   margin-right: auto;
   i {
-    padding: 15px;
+    padding: 5px;
     font-size: 25px;
+  }
+}
+
+.form-control:focus {
+  border-color: #FF0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(96, 205, 68, 0.6);
+}
+
+.btn-max {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 60px;
+  padding: 2px 8px;
+  font-weight: bold;
+  font-size: 12px;
+  cursor: pointer;
+  color: rgb(204, 204, 204);
+  border: 1px solid rgb(204, 204, 204);
+  transition: all 0.15s ease;
+}
+
+.btn-max:hover {
+  color: rgb(170, 170, 170);
+  border: 1px solid rgb(170, 170, 170);
+}
+
+.btn-max-left {
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.btn-max-right {
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.trade-buy-btn {
+  width: 260px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.buy-sell-button {
+  padding-top: 80px;
+  width: 560px;
+  height: 81px;
+  .btn {
+    margin: 0px;
   }
 }
 
 // Here starts CSS for the form inputs
 
 #tradeValueCryptoBuy {
-  height: 55px;
+  height: 60px;
+  font-size: 20px;
+  font-weight: normal;
   border: 0.5px solid $light-gray;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 #tradeValueFiatBuy {
-  height: 55px;
+  height: 60px;
+  font-size: 20px;
+  font-weight: normal;
   border: 0.5px solid $light-gray;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 
 
 #tradeValueCryptoSell {
-  height: 55px;
-  margin: 0;
+  height: 60px;
+  font-size: 20px;
+  font-weight: normal;
+  // margin: 0;
   border: 0.5px solid $light-gray;
 }
 
 #tradeValueFiatSell {
-  height: 55px;
-  margin: 0;
+  height: 60px;
+  font-size: 20px;
+  font-weight: normal;
+  // margin: 0;
   border: 0.5px solid $light-gray;
 }
